crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_stage_trigger.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&api.stage_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "stage-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "default",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Minimize",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
