crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_title.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&api.title_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "title",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Id,
            String(
                "floating-panel-title",
            ),
        ),
    ],
    styles: [],
}
